2005-08-10  Vivek Jain <jvivek@novell.com>
	
	* share-folder-common.c:(org_gnome_shared_folder_factory)
	always use full name for the folder
	**Fixes #311555

2005-08-06  Sankar P  <psankar@novell.com>

	* proxy.c: (proxy_dialog_store_widgets_data)
	Disabling giving proxy rights to self.
	Fixes #312365

2005-07-29  Vivek Jain <jvivek@novell.com>
	
	* status-track.c: (track_status):
	adjust row counts while calling add_detail
	so that it doesn't overlap the entries.
	**Fixes #302817

2005-07-29  Vivek Jain <jvivek@novell.com>

	* org-gnome-groupwise-features.eplug.xml:
	for status strack  removed "Item" tag entries, included a factory method

	* status-track.c :  (org_gnome_track_status): converted to 
	 factory method to add the item, moved most of its code to
	new function (track_status), which is a callback for the click
	 **Fixes #311721

2005-07-27  Sankar P  <psankar@novell.com>

	* org-gnome-groupwise-features.eplug.xml: Added the hook for
	the proxy-login feature, since it was removed by mistake.
	
2005-07-23  Chenthill Palanisamy  <pchenthill@novell.com>

	* Makefile.am: Added the new file process-meeting.c
	and widgets/misc to include headers.
	* org-gnome-groupwise-features.eplug.xml: Added the
	hook for processing meetings.
	* org-gnome-shared-folder.errors.xml: Added the message
	for asking for error 

2005-07-22  Vivek Jain <jvivek@novell.com>
	
	* share-folder.c : Put back the fix I committed on 
	2005-03-31, not sure when it got reverted.
	**Fixes #311217

2005-07-20  Shreyas Srinivasan <sshreyas@novell.com>

	* proxy.c: Fix #310710. Make code little smart. Stop
	adding tabs continously. Still does not reuse structures
	on multiple invocations though.
	
2005-07-20  Vivek Jain <jvivek@novell.com>
	
	* mail-send-options.c: connect to sod-signal and get the input data in
	the callback "feed_input_data"
	** Fixes #310854

2005-07-20  Sankar P  <psankar@novell.com>

	* Consolidated the proxy and proxy-login plugins into the 