@@ -64,3 +64,4 @@ void proxy_commit (GtkWidget *button, EConfigHookItemFactoryData *data);
 static void proxy_setup_meta_tree_view (EAccount *account);
 static proxyHandler *proxy_get_item_from_list (EAccount *account, char *account_name);
 static void proxy_load_edit_dialog (EAccount *account, proxyHandler *edited);
+void free_proxy_list (GList *proxy_list);
